--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -63,6 +63,11 @@ body {
 
 header {
 	display: flex;
+	flex-direction: column;
+}
+
+#initial-header {
+	display: flex;
 	justify-content: space-between;
 	margin: 50px 0
 }
@@ -165,7 +170,7 @@ li:hover {
 
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 
 #contact > * {
@@ -210,6 +215,34 @@ input[type="submit"] {
 	border-radius: 60px ;
 }
 
+#filter-container {
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	gap: 10px;
+	margin-bottom: 1.4em;
+}
+
+#filter-container button {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: #1D6154;
+	background-color: transparent;
+	border-radius: 60px;
+	border: 1px solid #1D6154;
+	padding: 5px 10px;
+	cursor: pointer;	
+}
+
+#filter-container button:hover {
+	background-color: #1D6154;
+	color: #ffffff;
+}
+
+button .selected {
+	background-color: #1D6154;
+}
+
 /** login.html **/
 
 #login {
@@ -248,6 +281,149 @@ input[type="submit"] {
 	text-decoration: underline;
 	font-weight: bold;
 }
+
+/* Modal */
+
+#edition-mode {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	width: 100%;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	background-color: black;
+	color: #ffffff;
+	i {
+		cursor: pointer;
+	}
+	p {
+		cursor: pointer;
+	}
+}
+#mes-projets {
+	display: flex;
+	justify-content: center;
+	align-items: baseline;
+	margin-left: 10%;
+
+}
+#modify-gallery {
+	display: flex;
+	gap: 10px;
+	cursor: pointer;
+	width: fit-content;	
+	margin-left: 30px;
+}
+
+/* pas utiliser left et bottom */
+
+
+#modify-container {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(70, 65, 65, 0.392);
+	border: none;
+	margin: 0;
+	#modal-modify {
+		background-color: #ffffff;
+		width: 30%;
+		height: 50%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-around;
+		border-radius: 10px;
+		position: relative;
+		padding: 50px 100px;
+		.fa-xmark {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			cursor: pointer;
+		}
+		h3 {
+			font-size: 30px;			
+		}
+		#handle-works {
+			border-bottom: 2px solid grey;
+		}
+		input {
+			padding: 7px;
+			cursor: pointer;			
+		}
+	}
+}
+
+#handle-works {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: repeat(3, auto);
+	grid-row-gap: 20px;
+	grid-column-gap: 10px;
+	margin: 40px 80px 0px 80px;
+	padding-bottom: 30px;
+	border-bottom: solid 2px #d0d0d0;
+  }
+
+#handle-works figure {
+    position: relative;
+	height: 135px;
+}
+  
+#handle-works img {
+	max-width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+
+#edit-container {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(70, 65, 65, 0.392);
+	margin: 0;
+	#edit-modal {
+		background-color: #ffffff;
+		width: 30%;
+		height: 50%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-around;
+		border-radius: 10px;
+		position: relative;
+		padding: 0 100px;
+		.fa-xmark {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			cursor: pointer;
+		}
+		.fa-arrow-left{
+			position: absolute;
+			top: 20px;
+			left: 20px;
+		}
+		h3 {
+			font-size: 20px;
+		}
+		#edit-form {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+}
+
 /** **/
 
 footer {
@@ -256,6 +432,8 @@ footer {
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	padding: 2em;
+	padding: 25px;
+	margin-top: 25px;
 }
+
 
