--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,19 +3,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -25,8 +93,17 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
 
@@ -34,16 +111,20 @@ body {
 	line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
 	list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
 	quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
@@ -52,16 +133,17 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /** end reset css**/
 body {
 	max-width: 1140px;
 	margin: auto;
-	font-family: 'Work Sans' ;
+	font-family: 'Work Sans';
 	font-size: 14px;
 	background-color: rgb(252, 249, 241);
 }
 
-header {
+#index-header {
 	display: flex;
 	flex-direction: column;
 }
@@ -94,11 +176,11 @@ h1 {
 	color: #B1663C
 }
 
-h1 > span {
+h1>span {
 	font-family: 'Work Sans';
-	font-size:10px;
+	font-size: 10px;
 	letter-spacing: 0.1em;
-;
+	;
 }
 
 h2 {
@@ -173,7 +255,7 @@ li:hover {
 	margin: auto;
 }
 
-#contact > * {
+#contact>* {
 	text-align: center;
 }
 
@@ -183,7 +265,7 @@ li:hover {
 
 #contact form {
 	text-align: left;
-	margin-top:30px;
+	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
@@ -209,10 +291,10 @@ input[type="submit"] {
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin: 2em auto;
 	width: 180px;
 	text-align: center;
-	border-radius: 60px ;
+	border-radius: 60px;
 }
 
 #filter-container {
@@ -231,7 +313,7 @@ input[type="submit"] {
 	border-radius: 60px;
 	border: 1px solid #1D6154;
 	padding: 5px 10px;
-	cursor: pointer;	
+	cursor: pointer;
 }
 
 #filter-container button:hover {
@@ -244,6 +326,12 @@ button .selected {
 }
 
 /** login.html **/
+
+#login-header {
+	display: flex;
+	justify-content: space-between;
+	margin: 50px 0
+}
 
 #login {
 	display: flex;
@@ -294,13 +382,16 @@ button .selected {
 	padding-bottom: 15px;
 	background-color: black;
 	color: #ffffff;
+
 	i {
 		cursor: pointer;
 	}
+
 	p {
 		cursor: pointer;
 	}
 }
+
 #mes-projets {
 	display: flex;
 	justify-content: center;
@@ -308,11 +399,12 @@ button .selected {
 	margin-left: 10%;
 
 }
+
 #modify-gallery {
 	display: flex;
 	gap: 10px;
 	cursor: pointer;
-	width: fit-content;	
+	width: fit-content;
 	margin-left: 30px;
 }
 
@@ -325,11 +417,13 @@ button .selected {
 	align-items: center;
 	position: fixed;
 	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(70, 65, 65, 0.392);
 	border: none;
 	margin: 0;
+
 	#modal-modify {
 		background-color: #ffffff;
 		width: 30%;
@@ -341,21 +435,44 @@ button .selected {
 		border-radius: 10px;
 		position: relative;
 		padding: 50px 100px;
+
 		.fa-xmark {
 			position: absolute;
 			top: 20px;
 			right: 20px;
 			cursor: pointer;
 		}
+
 		h3 {
-			font-size: 30px;			
+			font-size: 30px;
 		}
+
 		#handle-works {
 			border-bottom: 2px solid grey;
+
+			span {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				position: absolute;
+				top: 5px;
+				right: 5px;
+				background-color: black;
+				height: 18px;
+				width: 18px;
+				border-radius: 2px;
+			}
+
+			.fa-trash-can {
+				color: #ffffff;
+				cursor: pointer;
+				font-size: 0.6rem;
+			}
 		}
+
 		input {
 			padding: 7px;
-			cursor: pointer;			
+			cursor: pointer;
 		}
 	}
 }
@@ -369,18 +486,18 @@ button .selected {
 	margin: 40px 80px 0px 80px;
 	padding-bottom: 30px;
 	border-bottom: solid 2px #d0d0d0;
-  }
+}
 
 #handle-works figure {
-    position: relative;
+	position: relative;
 	height: 135px;
 }
-  
+
 #handle-works img {
 	max-width: 100%;
 	height: 100%;
 	object-fit: cover;
-  }
+}
 
 #edit-container {
 	display: none;
@@ -392,6 +509,7 @@ button .selected {
 	height: 100%;
 	background-color: rgba(70, 65, 65, 0.392);
 	margin: 0;
+
 	#edit-modal {
 		background-color: #ffffff;
 		width: 30%;
@@ -402,24 +520,74 @@ button .selected {
 		justify-content: space-around;
 		border-radius: 10px;
 		position: relative;
-		padding: 0 100px;
+		padding: 50px 100px;
+
 		.fa-xmark {
 			position: absolute;
 			top: 20px;
 			right: 20px;
 			cursor: pointer;
 		}
-		.fa-arrow-left{
+
+		.fa-arrow-left {
 			position: absolute;
 			top: 20px;
 			left: 20px;
+			cursor: pointer;
 		}
+
 		h3 {
-			font-size: 20px;
+			font-size: 25px;
 		}
+
 		#edit-form {
 			display: flex;
 			flex-direction: column;
+			width: 80%;
+			gap: 10px;
+
+			#add-image {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				background-color: rgb(194, 214, 233);
+				gap: 15px;
+				padding: 20px 0;
+
+				.fa-image {
+					font-size: 100px;
+					color: rgb(169, 167, 167);
+				}
+
+				label {
+					font-size: 20px;
+					border-radius: 50px;
+					background-color: rgb(164, 161, 161);
+					color: rgb(81, 131, 239);
+					padding: 10px 40px;
+					cursor: pointer;
+
+				}
+
+				input {
+					display: none;
+				}
+
+				img {
+					display: none;
+					max-width: 50%;
+					max-height: 50%;
+				}
+
+				p {
+					font-size: 15px;
+				}
+			}
+		}
+
+		#submit-img {
+			cursor: pointer;
 		}
 	}
 }
@@ -429,11 +597,10 @@ button .selected {
 footer {
 	background-color: #ffffff;
 }
+
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	padding: 25px;
 	margin-top: 25px;
 }
-
-
