--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -140,7 +140,7 @@ body {
 	margin: auto;
 	font-family: 'Work Sans';
 	font-size: 14px;
-	background-color: rgb(252, 249, 241);
+	background-color: #FFFEF8;
 }
 
 #index-header {
@@ -316,61 +316,17 @@ input[type="submit"] {
 	cursor: pointer;
 }
 
-#filter-container button:hover {
+#filter-container button:focus {
 	background-color: #1D6154;
 	color: #ffffff;
 }
 
-button .selected {
-	background-color: #1D6154;
-}
+/* Partie connectée */
 
-/** login.html **/
-
-#login-header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
-}
-
-#login {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin-top: 150px;
-	margin-bottom: 350px;
-}
-
-#login-form {
+#projets {
 	display: flex;
 	flex-direction: column;
 }
-
-#login input {
-	height: 50px;
-	width: 400px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
-
-#login #connect {
-	width: 200px;
-	cursor: pointer;
-}
-
-#login label {
-	margin: 2em 0 1em 0;
-}
-
-#login a {
-	color: black;
-	text-decoration: underline;
-	font-weight: bold;
-}
-
-/* Modal */
 
 #edition-mode {
 	display: flex;
@@ -397,7 +353,6 @@ button .selected {
 	justify-content: center;
 	align-items: baseline;
 	margin-left: 10%;
-
 }
 
 #modify-gallery {
@@ -408,23 +363,24 @@ button .selected {
 	margin-left: 30px;
 }
 
-/* pas utiliser left et bottom */
+/* Première Modale */
 
-
-#modify-container {
+#modal-container {
 	display: none;
 	justify-content: center;
 	align-items: center;
 	position: fixed;
+	z-index: 2;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	overflow: auto;
 	background-color: rgba(70, 65, 65, 0.392);
 	border: none;
 	margin: 0;
 
-	#modal-modify {
+	#delete-modal {
 		background-color: #ffffff;
 		width: 30%;
 		height: 50%;
@@ -434,7 +390,7 @@ button .selected {
 		justify-content: space-around;
 		border-radius: 10px;
 		position: relative;
-		padding: 50px 100px;
+		padding: 50px;
 
 		.fa-xmark {
 			position: absolute;
@@ -449,78 +405,70 @@ button .selected {
 
 		#handle-works {
 			border-bottom: 2px solid grey;
+			display: grid;
+			grid-template-columns: repeat(5, 1fr);
+			grid-template-rows: repeat(3, auto);
+			grid-row-gap: 20px;
+			grid-column-gap: 10px;
+			margin: 40px 80px 0px 80px;
+			padding-bottom: 30px;
+			border-bottom: solid 2px #d0d0d0;
 
-			span {
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				position: absolute;
-				top: 5px;
-				right: 5px;
-				background-color: black;
-				height: 18px;
-				width: 18px;
-				border-radius: 2px;
-			}
+			figure {
+				position: relative;
+				height: 100%;
+				width: 100%;
 
-			.fa-trash-can {
-				color: #ffffff;
-				cursor: pointer;
-				font-size: 0.6rem;
+				img {
+					max-width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+
+				span {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					position: absolute;
+					top: 5px;
+					right: 5px;
+					background-color: black;
+					height: 16px;
+					width: 16px;
+					border-radius: 2px;
+
+					.fa-trash-can {
+						color: #ffffff;
+						cursor: pointer;
+						font-size: 0.6rem;
+					}
+				}
 			}
 		}
 
 		input {
 			padding: 7px;
+			margin-top: 10px;
+			margin-bottom: 10px;
+			border: 1px;
 			cursor: pointer;
 		}
 	}
-}
 
-#handle-works {
-	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(3, auto);
-	grid-row-gap: 20px;
-	grid-column-gap: 10px;
-	margin: 40px 80px 0px 80px;
-	padding-bottom: 30px;
-	border-bottom: solid 2px #d0d0d0;
-}
+/* Seconde Modale */
 
-#handle-works figure {
-	position: relative;
-	height: 135px;
-}
-
-#handle-works img {
-	max-width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
-
-#edit-container {
-	display: none;
-	justify-content: center;
-	align-items: center;
-	position: fixed;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(70, 65, 65, 0.392);
-	margin: 0;
-
-	#edit-modal {
+	#add-modal {
+		display: none;
 		background-color: #ffffff;
 		width: 30%;
 		height: 50%;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: space-around;
+		justify-content: flex-start;
 		border-radius: 10px;
 		position: relative;
-		padding: 50px 100px;
+		padding: 50px;
 
 		.fa-xmark {
 			position: absolute;
@@ -538,36 +486,40 @@ button .selected {
 
 		h3 {
 			font-size: 25px;
+			margin-bottom: 15px;
 		}
 
 		#edit-form {
 			display: flex;
 			flex-direction: column;
-			width: 80%;
-			gap: 10px;
+			justify-content: space-between;
+			width: 90%;
+			height: 80%;
+			gap: 20px;
 
 			#add-image {
 				display: flex;
 				flex-direction: column;
+				position: relative;
 				align-items: center;
 				justify-content: center;
+				height: 50%;
 				background-color: rgb(194, 214, 233);
 				gap: 15px;
 				padding: 20px 0;
 
 				.fa-image {
-					font-size: 100px;
+					font-size: 90px;
 					color: rgb(169, 167, 167);
 				}
 
 				label {
-					font-size: 20px;
+					font-size: 15px;
 					border-radius: 50px;
 					background-color: rgb(164, 161, 161);
 					color: rgb(81, 131, 239);
-					padding: 10px 40px;
+					padding: 10px 17px;
 					cursor: pointer;
-
 				}
 
 				input {
@@ -576,23 +528,62 @@ button .selected {
 
 				img {
 					display: none;
-					max-width: 50%;
-					max-height: 50%;
+					position: absolute;
+					max-width: 100%;
+					max-height: 100%;	
 				}
 
 				p {
-					font-size: 15px;
+					font-size: 12px;
 				}
 			}
-		}
 
-		#submit-img {
-			cursor: pointer;
+			.form-input {
+				display: flex;
+				flex-direction: column;
+				gap: 5px;
+
+				label {
+					font-size: 15px;
+				}
+
+				input {
+					padding: 5px;
+					border: 1px;
+					box-shadow: 0px 4px 14px 0px #00000017;
+				}
+
+				select {
+					padding: 5px;
+					border: 1px;
+					box-shadow: 0px 4px 14px 0px #00000017;
+				}
+			}
+
+			hr {
+				width: 100%;
+				background-color: #d0d0d0;
+				margin-top: 15px;
+			}
+
+			#submit-img {
+				background-color: #A7A7A7;
+				border: 1px;
+				cursor: pointer;
+				padding: 5px;
+				margin-top: 0;
+			}
 		}
 	}
 }
 
-/** **/
+/** Contact **/
+
+#contact-submit {
+	cursor: pointer;
+}
+
+/** Footer **/
 
 footer {
 	background-color: #ffffff;
@@ -603,4 +594,54 @@ footer nav ul {
 	justify-content: flex-end;
 	padding: 25px;
 	margin-top: 25px;
+}
+
+/** login.html **/
+
+#login-header {
+	display: flex;
+	justify-content: space-between;
+	margin: 50px 0
+}
+
+#login {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 150px;
+	margin-bottom: 350px;
+
+	#error-login {
+		color: red;
+		margin-top: 10px;
+	}
+
+	#login-form {
+		display: flex;
+		flex-direction: column;
+
+		label {
+			margin: 2em 0 1em 0;
+		}
+
+		input {
+			height: 50px;
+			width: 400px;
+			font-size: 1.2em;
+			border: none;
+			box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+		}
+
+		#connect {
+			width: 200px;
+			cursor: pointer;
+		}
+	}
+
+	a {
+		color: black;
+		text-decoration: underline;
+		font-weight: bold;
+	}
 }
